--- a/configuration/experiment_runs1.yml
+++ b/configuration/experiment_runs1.yml
@@ -1,72 +1,39 @@
-- dataset: covertype
-  model: gate
+- dataset: creditcard
+  model: xgb
   best_params: {}
   param_grid:
-    outer_params: &id001
-      hyperopt_evals: 5
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-06
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 3
-    batch_size: &id002
-    - 512
-    - 1024
-    tree_depth: &id003
-    - 5
-    - 6
-    num_trees: &id004
-    - 6
-    - 8
-    gflu_stages: &id005
-    - 3
-    - 6
-    gflu_dropout: &id006
+    outer_params:
+      hyperopt_evals: 10
+      validation_fraction: 0.15
+      early_stopping_rounds: 50
+      verbose: false
+    n_estimators:
+    - 100
+    - 4000
+    max_bin:
+    - 256
+    - 32
+    max_depth:
+    - 4
+    - 9
+    learning_rate:
+    - 0.1
+    - 0.33
+    subsample:
+    - 0.7
+    - 1.0
+    colsample_bytree:
+    - 0.5
+    - 1.0
+    min_child_weight:
+    - 1
+    - 10
+    alpha:
     - 0.0
-    - 0.05
-    tree_dropout: &id007
+    - 5.0
+    gamma:
     - 0.0
-    - 0.05
-    tree_wise_attention_dropout: &id008
+    - 5.0
+    lambda:
     - 0.0
-    - 0.05
-    embedding_dropout: &id009
-    - 0
-    - 0.2
-    optimizer_fn: &id010
-      Adam:
-        weight_decay:
-        - 0.001
-        - 0.0001
-      AdamW:
-        weight_decay:
-        - 0.001
-        - 0.0001
-    scheduler_fn: &id011
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 2
-        - 4
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: covertype
-  model: s1dcnn
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    tree_depth: *id003
-    num_trees: *id004
-    gflu_stages: *id005
-    gflu_dropout: *id006
-    tree_dropout: *id007
-    tree_wise_attention_dropout: *id008
-    embedding_dropout: *id009
-    optimizer_fn: *id010
-    scheduler_fn: *id011
+    - 5.0
