--- a/autodeep/configuration/model_config.yml
+++ b/autodeep/configuration/model_config.yml
@@ -59,8 +59,19 @@ model_configs:
 
     param_grid:
       batch_size:
+        - 128
         - 1024
-        - 2048
+      layers:
+        - "128-64-32"
+        - "256-128"
+        - "256-128-64-32"
+        - "32-16"
+        - "64-32-16"
+        - "64-32"
+      activation:
+        - "ReLU"
+        - "LeakyReLU"
+
       optimizer_fn:
         Adam:
           weight_decay:
@@ -68,7 +79,7 @@ model_configs:
             - 0.0000001
           learning_rate:
             - 0.001
-            - 0.00001
+            - 0.0001
         SGD:
           weight_decay:
             - 0.0
@@ -85,7 +96,7 @@ model_configs:
             - 0.0000001
           learning_rate:
             - 0.001
-            - 0.00001
+            - 0.0001
       scheduler_fn:
         ReduceLROnPlateau:
           factor:
@@ -156,7 +167,7 @@ model_configs:
         - 0.0
         - 0.1
         - 0.2
-
+      
   mlp:
     data_params:
       normalize_features: mean_std
