--- a/autodeep/configuration/model_config.yml
+++ b/autodeep/configuration/model_config.yml
@@ -53,7 +53,7 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 1000
+      max_epochs: 10
       val_size: 0.15
       early_stopping_patience: 20
 
@@ -71,7 +71,958 @@ model_configs:
       activation:
         - "ReLU"
         - "LeakyReLU"
+      use_batch_norm:
+        - True
+        - false
+      initialization:
+        - "kaiming"
+        - "xavier"
+        - "random"
+      dropout:
+        - 0.0
+        - 0.3
+      embedding_dropout:
+        - 0.0
+        - 0.2
 
+      optimizer_fn:
+        Adam:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+        SGD:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          momentum:
+            - 0.0
+            - 0.9
+          learning_rate:
+            - 0.001
+            - 0.00001
+        AdamW:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+      scheduler_fn:
+        ReduceLROnPlateau:
+          factor:
+            - 0.1
+            - 0.01
+          patience:
+            - 5
+            - 10
+        StepLR:
+          step_size:
+            - 10
+            - 30
+          gamma:
+            - 0.1
+            - 0.5
+        ExponentialLR:
+          gamma:
+            - 0.9
+            - 0.99
+
+  gandalf:
+
+    data_params:
+      normalize_features: mean_std
+      encode_categorical: False  # for dataloader
+      return_extra_info: True  # for dataloader
+    
+
+    default_params:
+      early_stopping_rounds: 10
+      verbose: false
+      iterations: 20
+      retrain: False
+      auto_lr_find: False
+      max_epochs: 10
+      val_size: 0.15
+      early_stopping_patience: 20
+
+    param_grid:
+      batch_size:
+        - 128
+        - 1024
+      layers:
+        - "128-64-32"
+        - "256-128"
+        - "256-128-64-32"
+        - "32-16"
+        - "64-32-16"
+        - "64-32"
+      activation:
+        - "ReLU"
+        - "LeakyReLU"
+      gflu_stages:
+        - 2
+        - 8
+      gflu_dropout:
+        - 0.0
+        - 0.1
+      embedding_dropout:
+        - 0.0
+        - 0.1
+      optimizer_fn:
+        Adam:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+        SGD:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          momentum:
+            - 0.0
+            - 0.9
+          learning_rate:
+            - 0.001
+            - 0.00001
+        AdamW:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+      scheduler_fn:
+        ReduceLROnPlateau:
+          factor:
+            - 0.1
+            - 0.01
+          patience:
+            - 5
+            - 10
+        StepLR:
+          step_size:
+            - 10
+            - 30
+          gamma:
+            - 0.1
+            - 0.5
+        ExponentialLR:
+          gamma:
+            - 0.9
+            - 0.99
+
+  autoint:
+
+    data_params:
+      normalize_features: mean_std
+      encode_categorical: False  # for dataloader
+      return_extra_info: True  # for dataloader
+
+    default_params:
+      early_stopping_rounds: 10
+      verbose: false
+      iterations: 20
+      retrain: False
+      auto_lr_find: False
+      max_epochs: 10
+      val_size: 0.15
+      early_stopping_patience: 20
+
+    param_grid:
+      batch_size:
+        - 64
+        - 1024
+      attn_embed_dim:
+        - 16
+        - 64
+      num_heads:
+        - 1
+        - 4
+      num_attn_blocks:
+        - 1
+        - 3
+      attn_dropouts:
+        - 0.0
+        - 0.2
+      embedding_dim:
+        - 8
+        - 32
+      shared_embedding_fraction:
+        - 0.1
+        - 0.4
+      layers:
+        - "64-32"
+        - "128-64-32"
+        - "256-128-64-32"
+      activation:
+        - ReLU
+        - LeakyReLU
+        - TanH
+      dropout:
+        - 0.0
+        - 0.2
+      attention_pooling:
+        - True
+        - False
+      embedding_initialization:
+        - kaiming_uniform
+        - kaiming_normal
+      share_embedding_strategy:
+        - add
+        - fraction
+      embedding_dropout:
+        - 0.05
+        - 0.2
+      batch_norm_continuous_input:
+        - True
+        - False
+      initialization:
+        - kaiming
+        - xavier
+        - random
+
+      optimizer_fn:
+        Adam:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+        SGD:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          momentum:
+            - 0.0
+            - 0.9
+          learning_rate:
+            - 0.001
+            - 0.00001
+        AdamW:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+      scheduler_fn:
+        ReduceLROnPlateau:
+          factor:
+            - 0.1
+            - 0.01
+          patience:
+            - 5
+            - 10
+        StepLR:
+          step_size:
+            - 10
+            - 30
+          gamma:
+            - 0.1
+            - 0.5
+        ExponentialLR:
+          gamma:
+            - 0.9
+            - 0.99
+
+  fttransformer:
+
+    data_params:
+      normalize_features: mean_std
+      encode_categorical: False  # for dataloader
+      return_extra_info: True  # for dataloader
+
+    default_params:
+      early_stopping_rounds: 10
+      verbose: false
+      iterations: 20
+      retrain: False
+      auto_lr_find: False
+      max_epochs: 10
+      val_size: 0.15
+      early_stopping_patience: 20
+
+    param_grid:
+      batch_size:
+        - 64
+        - 1024
+      input_embed_dim:
+        - 16
+        - 64
+      num_heads:
+        - 4
+        - 16
+      num_attn_blocks:
+        - 3
+        - 8
+      attn_dropout:
+        - 0.0
+        - 0.2
+      add_norm_dropout:
+        - 0.0
+        - 0.2
+      ff_dropout:
+        - 0.0
+        - 0.2
+      ff_hidden_multiplier:
+        - 2
+        - 6
+      shared_embedding_fraction:
+        - 0.1
+        - 0.4
+      learning_rate:
+        - 0.0005
+        - 0.005
+      transformer_activation:
+        - GEGLU
+        - ReGLU
+        - SwiGLU
+        - ReLU
+      embedding_initialization:
+        - kaiming_uniform
+        - kaiming_normal
+      share_embedding_strategy:
+        - add
+        - fraction
+      embedding_dropout:
+        - 0.05
+        - 0.2
+      batch_norm_continuous_input:
+        - True
+        - False
+      attention_pooling:
+        - True
+        - False
+
+      optimizer_fn:
+        Adam:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+        SGD:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          momentum:
+            - 0.0
+            - 0.9
+          learning_rate:
+            - 0.001
+            - 0.00001
+        AdamW:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+      scheduler_fn:
+        ReduceLROnPlateau:
+          factor:
+            - 0.1
+            - 0.01
+          patience:
+            - 5
+            - 10
+        StepLR:
+          step_size:
+            - 10
+            - 30
+          gamma:
+            - 0.1
+            - 0.5
+        ExponentialLR:
+          gamma:
+            - 0.9
+            - 0.99
+
+  gate:
+
+    data_params:
+      normalize_features: mean_std
+      encode_categorical: False  # for dataloader
+      return_extra_info: True  # for dataloader
+
+    default_params:
+      early_stopping_rounds: 10
+      verbose: false
+      iterations: 20
+      retrain: False
+      auto_lr_find: False
+      max_epochs: 10
+      val_size: 0.15
+      early_stopping_patience: 20
+
+    param_grid:
+      batch_size:
+        - 64
+        - 1024
+      gflu_stages:
+        - 4
+        - 8
+      gflu_dropout:
+        - 0.0
+        - 0.2
+      tree_depth:
+        - 3
+        - 6
+      num_trees:
+        - 5
+        - 20
+      binning_activation:
+        - sparsemoid
+        - entmoid
+      feature_mask_function:
+        - sparsemax
+        - entmax
+      tree_dropout:
+        - 0.0
+        - 0.2
+      tree_wise_attention:
+        - True
+        - False
+      tree_wise_attention_dropout:
+        - 0.0
+        - 0.2
+      share_head_weights:
+        - True
+        - False
+      learning_rate:
+        - 0.0005
+        - 0.005
+      embedding_dropout:
+        - 0.05
+        - 0.2
+      batch_norm_continuous_input:
+        - True
+        - False
+      optimizer_fn:
+        Adam:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+        SGD:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          momentum:
+            - 0.0
+            - 0.9
+          learning_rate:
+            - 0.001
+            - 0.00001
+        AdamW:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+      scheduler_fn:
+        ReduceLROnPlateau:
+          factor:
+            - 0.1
+            - 0.01
+          patience:
+            - 5
+            - 10
+        StepLR:
+          step_size:
+            - 10
+            - 30
+          gamma:
+            - 0.1
+            - 0.5
+        ExponentialLR:
+          gamma:
+            - 0.9
+            - 0.99
+
+  node:
+
+    data_params:
+      normalize_features: mean_std
+      encode_categorical: False  # for dataloader
+      return_extra_info: True  # for dataloader
+
+    default_params:
+      early_stopping_rounds: 10
+      verbose: false
+      iterations: 20
+      retrain: False
+      auto_lr_find: False
+      max_epochs: 10
+      val_size: 0.15
+      early_stopping_patience: 20
+
+    param_grid:
+      batch_size:
+        - 64
+        - 512
+      num_layers:
+        - 1
+        - 2
+      num_trees:
+        - 512
+        - 1024
+      additional_tree_output_dim:
+        - 2
+        - 4
+      depth:
+        - 4
+        - 6
+      choice_function:
+        - entmax15
+        - sparsemax
+      bin_function:
+        - entmoid15
+        - sparsemoid
+      max_features:
+        - 10
+        - 50
+        - 100
+      input_dropout:
+        - 0.0
+        - 0.2
+      initialize_response:
+        - normal
+        - uniform
+      initialize_selection_logits:
+        - normal
+        - uniform
+      threshold_init_beta:
+        - 0.5
+        - 1.0
+        - 2.0
+      threshold_init_cutoff:
+        - 0.5
+        - 1.0
+        - 2.0
+      embedding_dropout:
+        - 0.0
+        - 0.2
+      batch_norm_continuous_input:
+        - True
+        - False
+      embed_categorical:
+        - True
+        - False
+      optimizer_fn:
+        Adam:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+        SGD:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          momentum:
+            - 0.0
+            - 0.9
+          learning_rate:
+            - 0.001
+            - 0.00001
+        AdamW:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+      scheduler_fn:
+        ReduceLROnPlateau:
+          factor:
+            - 0.1
+            - 0.01
+          patience:
+            - 5
+            - 10
+        StepLR:
+          step_size:
+            - 10
+            - 30
+          gamma:
+            - 0.1
+            - 0.5
+        ExponentialLR:
+          gamma:
+            - 0.9
+            - 0.99
+
+  tabnet:
+
+    data_params:
+      normalize_features: mean_std
+      encode_categorical: False  # for dataloader
+      return_extra_info: True  # for dataloader
+
+    default_params:
+      early_stopping_rounds: 10
+      verbose: false
+      iterations: 20
+      retrain: False
+      auto_lr_find: False
+      max_epochs: 10
+      val_size: 0.15
+      early_stopping_patience: 20
+
+    param_grid:
+      batch_size:
+        - 64
+        - 512
+        - 1024
+      n_d: 
+        - 8
+        - 16
+        - 32
+        - 64
+      n_a:
+        - 8
+        - 16
+        - 32
+        - 64
+      n_steps:
+        - 3
+        - 4
+        - 5
+        - 6
+      gamma:
+        - 1.1
+        - 1.3
+        - 1.5
+      n_independent:
+        - 1
+        - 2
+        - 3
+      n_shared:
+        - 1
+        - 2
+        - 3
+      virtual_batch_size:
+        - 32
+        - 64
+        - 128
+      mask_type:
+        - sparsemax
+        - entmax
+      learning_rate:
+        - 0.0005
+        - 0.001
+        - 0.005
+      embedding_dropout:
+        - 0.0
+        - 0.1
+        - 0.2
+      batch_norm_continuous_input:
+        - True
+        - False
+      head:
+        - LinearHead
+        - MixtureDensityHead
+
+      optimizer_fn:
+        Adam:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+        SGD:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          momentum:
+            - 0.0
+            - 0.9
+          learning_rate:
+            - 0.001
+            - 0.00001
+        AdamW:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+      scheduler_fn:
+        ReduceLROnPlateau:
+          factor:
+            - 0.1
+            - 0.01
+          patience:
+            - 5
+            - 10
+        StepLR:
+          step_size:
+            - 10
+            - 30
+          gamma:
+            - 0.1
+            - 0.5
+        ExponentialLR:
+          gamma:
+            - 0.9
+            - 0.99
+
+  tabtransformer:
+
+    data_params:
+      normalize_features: mean_std
+      encode_categorical: False  # for dataloader
+      return_extra_info: True  # for dataloader
+
+    default_params:
+      early_stopping_rounds: 10
+      verbose: false
+      iterations: 20
+      retrain: False
+      auto_lr_find: False
+      max_epochs: 10
+      val_size: 0.15
+      early_stopping_patience: 20
+
+    param_grid:
+      batch_size:
+        - 64
+        - 512
+        - 1024
+      input_embed_dim:
+        - 32
+        - 64
+        - 128
+      embedding_initialization:
+        - kaiming_uniform
+        - kaiming_normal
+      embedding_bias:
+        - True
+        - False
+      share_embedding:
+        - True
+        - False
+      share_embedding_strategy:
+        - add
+        - fraction
+      shared_embedding_fraction:
+        - 0.25
+        - 0.5
+        - 0.75
+      num_heads:
+        - 4
+        - 8
+        - 16
+      num_attn_blocks:
+        - 4
+        - 6
+        - 8
+      transformer_head_dim:
+        - 32
+        - 64
+        - 128
+      attn_dropout:
+        - 0.1
+        - 0.2
+        - 0.3
+      add_norm_dropout:
+        - 0.1
+        - 0.2
+      ff_dropout:
+        - 0.1
+        - 0.2
+      ff_hidden_multiplier:
+        - 2
+        - 4
+        - 8
+      transformer_activation:
+        - GEGLU
+        - ReLU
+        - SwiGLU
+      out_ff_layers:
+        - "128-64-32"
+        - "256-128-64"
+      out_ff_activation:
+        - ReLU
+        - LeakyReLU
+      out_ff_dropout:
+        - 0.0
+        - 0.1
+        - 0.2
+      out_ff_initialization:
+        - kaiming
+        - xavier
+        - random
+      learning_rate:
+        - 0.0005
+        - 0.001
+        - 0.005
+      embedding_dropout:
+        - 0.0
+        - 0.1
+        - 0.2
+      batch_norm_continuous_input:
+        - True
+        - False
+      head:
+        - LinearHead
+        - MixtureDensityHead
+
+      optimizer_fn:
+        Adam:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+        SGD:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          momentum:
+            - 0.0
+            - 0.9
+          learning_rate:
+            - 0.001
+            - 0.00001
+        AdamW:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+      scheduler_fn:
+        ReduceLROnPlateau:
+          factor:
+            - 0.1
+            - 0.01
+          patience:
+            - 5
+            - 10
+        StepLR:
+          step_size:
+            - 10
+            - 30
+          gamma:
+            - 0.1
+            - 0.5
+        ExponentialLR:
+          gamma:
+            - 0.9
+            - 0.99
+
+  resnet:
+    data_params:
+      normalize_features: mean_std
+      encode_categorical: True
+      return_extra_info: True  # for dataloader
+
+    default_params:
+      early_stopping_rounds: 10
+      verbose: false
+      iterations: 20
+      retrain: False
+      auto_lr_find: False
+      max_epochs: 1000
+      val_size: 0.2
+      early_stopping_patience: 6
+
+    param_grid:
+      resnet_depth:
+        - resnet18
+        - resnet34
+        - resnet50
+        - resnet101
+        - resnet152
+      batch_size:
+        - 1024
+        - 512
+        - 256
+      optimizer_fn:
+        Adam:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+        SGD:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          momentum:
+            - 0.0
+            - 0.9
+          learning_rate:
+            - 0.001
+            - 0.00001
+        AdamW:
+          weight_decay:
+            - 0.0
+            - 0.0000001
+          learning_rate:
+            - 0.001
+            - 0.0001
+      scheduler_fn:
+        ReduceLROnPlateau:
+          factor:
+            - 0.1
+            - 0.01
+          patience:
+            - 5
+            - 10
+        StepLR:
+          step_size:
+            - 10
+            - 30
+          gamma:
+            - 0.1
+            - 0.5
+        ExponentialLR:
+          gamma:
+            - 0.9
+            - 0.99
+
+  s1dcnn:
+    data_params:
+      normalize_features: mean_std
+      encode_categorical: False  # for dataloader
+      return_extra_info: True  # for dataloader
+
+    default_params:
+      early_stopping_rounds: 10
+      verbose: false
+      iterations: 20
+      retrain: False
+      auto_lr_find: False
+      max_epochs: 1
+      val_size: 0.15
+      early_stopping_patience: 5
+
+    param_grid:
+      batch_size:
+        - 1024
+        - 512
+        - 256
+      hidden_size:
+        - 4096
+        - 2048
+        - 1024
       optimizer_fn:
         Adam:
           weight_decay:
