--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,18 @@
-catboost==1.2.1
-category-encoders==2.6.1
-hyperopt==0.2.7
-ipykernel
-ipywidgets
+catboost
+category-encoders
+hyperopt
 matplotlib
-numpy==1.25.2
-pandas==2.0.3
-Pillow==10.0.0
-plotly==5.16.1
+numpy
+pandas
+Pillow
+plotly
 pytorch-tabular
-# pytorch-tabular @ git+https://github.com/manujosephv/pytorch_tabular.git@20499a473056ff75474cda1d8a9d3ac7a105ed20
-PyYAML==6.0.1
-scikit-learn==1.3.0
-scipy==1.11.1
-seaborn==0.12.2
-torch==1.13.1
-torchmetrics==0.11.4
-torchvision==0.14.1
-tqdm==4.66.0
-xgboost==1.7.6
+PyYAML
+scikit-learn
+scipy
+seaborn
+tqdm
+xgboost
+ipykernel
+requests
+torchvision
