--- a/autodeep/configuration/model_config.yml
+++ b/autodeep/configuration/model_config.yml
@@ -53,14 +53,14 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 10
+      max_epochs: 3
       val_size: 0.15
       early_stopping_patience: 20
 
     param_grid:
       batch_size:
         - 128
-        - 1024
+        - 2048
       layers:
         - "128-64-32"
         - "256-128"
@@ -144,14 +144,14 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 10
+      max_epochs: 3
       val_size: 0.15
       early_stopping_patience: 20
 
     param_grid:
       batch_size:
         - 128
-        - 1024
+        - 2048
       layers:
         - "128-64-32"
         - "256-128"
@@ -229,23 +229,23 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 10
+      max_epochs: 3
       val_size: 0.15
       early_stopping_patience: 20
 
     param_grid:
       batch_size:
-        - 64
-        - 1024
-      attn_embed_dim:
-        - 16
-        - 64
+        - 128
+        - 2048
+      attn_embed_dim_multiplier:
+        - 8
+        - 32
       num_heads:
         - 1
         - 4
       num_attn_blocks:
         - 1
-        - 3
+        - 5
       attn_dropouts:
         - 0.0
         - 0.2
@@ -344,17 +344,17 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 10
+      max_epochs: 3
       val_size: 0.15
       early_stopping_patience: 20
 
     param_grid:
       batch_size:
-        - 64
-        - 1024
-      input_embed_dim:
-        - 16
-        - 64
+        - 128
+        - 2048
+      input_embed_dim_multiplier:
+        - 1
+        - 8
       num_heads:
         - 4
         - 16
@@ -376,9 +376,6 @@ model_configs:
       shared_embedding_fraction:
         - 0.1
         - 0.4
-      learning_rate:
-        - 0.0005
-        - 0.005
       transformer_activation:
         - GEGLU
         - ReGLU
@@ -458,17 +455,17 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 10
+      max_epochs: 3
       val_size: 0.15
       early_stopping_patience: 20
 
     param_grid:
       batch_size:
-        - 64
+        - 128
         - 1024
       gflu_stages:
         - 4
-        - 8
+        - 7
       gflu_dropout:
         - 0.0
         - 0.2
@@ -477,7 +474,7 @@ model_configs:
         - 6
       num_trees:
         - 5
-        - 20
+        - 11
       binning_activation:
         - sparsemoid
         - entmoid
@@ -496,9 +493,6 @@ model_configs:
       share_head_weights:
         - True
         - False
-      learning_rate:
-        - 0.0005
-        - 0.005
       embedding_dropout:
         - 0.05
         - 0.2
@@ -563,7 +557,7 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 10
+      max_epochs: 3
       val_size: 0.15
       early_stopping_patience: 20
 
@@ -670,7 +664,7 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 10
+      max_epochs: 3
       val_size: 0.15
       early_stopping_patience: 20
 
@@ -713,10 +707,7 @@ model_configs:
       mask_type:
         - sparsemax
         - entmax
-      learning_rate:
-        - 0.0005
-        - 0.001
-        - 0.005
+
       embedding_dropout:
         - 0.0
         - 0.1
@@ -724,9 +715,6 @@ model_configs:
       batch_norm_continuous_input:
         - True
         - False
-      head:
-        - LinearHead
-        - MixtureDensityHead
 
       optimizer_fn:
         Adam:
@@ -786,7 +774,7 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 10
+      max_epochs: 3
       val_size: 0.15
       early_stopping_patience: 20
 
@@ -795,10 +783,12 @@ model_configs:
         - 64
         - 512
         - 1024
-      input_embed_dim:
-        - 32
-        - 64
-        - 128
+      input_embed_dim_multiplier:
+        - 1
+        - 8
+      num_heads:
+        - 4
+        - 16
       embedding_initialization:
         - kaiming_uniform
         - kaiming_normal
@@ -815,10 +805,6 @@ model_configs:
         - 0.25
         - 0.5
         - 0.75
-      num_heads:
-        - 4
-        - 8
-        - 16
       num_attn_blocks:
         - 4
         - 6
@@ -859,10 +845,6 @@ model_configs:
         - kaiming
         - xavier
         - random
-      learning_rate:
-        - 0.0005
-        - 0.001
-        - 0.005
       embedding_dropout:
         - 0.0
         - 0.1
@@ -870,9 +852,6 @@ model_configs:
       batch_norm_continuous_input:
         - True
         - False
-      head:
-        - LinearHead
-        - MixtureDensityHead
 
       optimizer_fn:
         Adam:
@@ -931,7 +910,7 @@ model_configs:
       iterations: 20
       retrain: False
       auto_lr_find: False
-      max_epochs: 1000
+      max_epochs: 300
       val_size: 0.2
       early_stopping_patience: 6
 
@@ -1126,6 +1105,8 @@ model_configs:
       activation: relu
       solver: adam
       batch_size: 1024
+      val_size: 0.15
+
 
     param_grid:
       n_iter_no_change:
