--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@
 data/
 output/
 notebooks/
-examples/
-*/catboost_info/
+autodeep/myexamples/
 SCRATCH/
-logs/
+
+*/catboost_info/
 *.csv
+tracked_files.txt
+current_req.txt
 
 # Compiled Python files
 __pycache__/
@@ -17,7 +19,6 @@ __init__.pyc
 *.ckpt
 .pt_tmp/
 
-
 # Python environment
 venv/
 env/
@@ -25,7 +26,7 @@ env/
 .Python
 pip-log.txt
 pip-delete-this-directory.txt
-
+.python-version
 # Jupyter Notebook
 .ipynb_checkpoints/
 
